fixed width and position where to next on mobile

--- a/src/components/profile/MyAccount/myaccount.module.css
+++ b/src/components/profile/MyAccount/myaccount.module.css
@@ -529,3 +529,10 @@ span {
   border-radius: 10px;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
 }
+
+@media (max-width: 500px) {
+  .whereToNextModal {
+    width: 250px;
+    height: 270px;
+  }
+}
